--- a/src/app/home/event-card/event-card.component.scss
+++ b/src/app/home/event-card/event-card.component.scss
@@ -43,8 +43,7 @@
         justify-content: space-around;
     }
 
-    mat-chip{
-        cursor: pointer;
-        outline: none;
+    a {
+        margin-right: 1rem;
     }
 }
