--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,5 +92,7 @@ snack-bar-container {
     }
 }
 
-
+.timeline-container .mat-expansion-panel-content > .mat-expansion-panel-body {
+    padding: 0;
+}
 
