--- a/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.html
+++ b/src/app/riders/rider-profile/rider-timeline/time-line/time-line.component.html
@@ -1,9 +1,14 @@
 <div class="container" *ngFor="let timelineItem of timeline; first as isFirst; last as isLast">
     <div class="container__timeline">
-        <rs-time-line-line *ngIf="isFirst && isLast" [ongoing]="ongoing"></rs-time-line-line>
-        <rs-time-line-line *ngIf="isFirst && !isLast" [next]="true"></rs-time-line-line>
-        <rs-time-line-line *ngIf="isLast" [previous]="true" [ongoing]="ongoing"></rs-time-line-line>
-        <rs-time-line-line *ngIf="!isLast && !isFirst" [next]="true" [previous]="true"></rs-time-line-line>
+        <div class="container__timeline-viewbox">
+            <svg viewBox="0 0 10 10">
+                <line *ngIf="!isFirst" x1="5" x2="5" y1="-2500" y2="5" />
+                <line *ngIf="!isLast" x1="5" x2="5" y1="5" y2="2500" />
+                <line class="info" x1="5" x2="10" y1="5" y2="5" />
+                <circle cx="5" cy="5" r="1"/>
+                <circle *ngIf="ongoing && isLast" class="ongoing" cx="5" cy="5" r="1.5"/>
+            </svg>
+        </div>
     </div>
     <div class="container__details">
         <mat-card class="container__details__card">
