--- a/src/app/riders/rider-profile/rider-timeline/rider-time-line.component.scss
+++ b/src/app/riders/rider-profile/rider-timeline/rider-time-line.component.scss
@@ -43,7 +43,7 @@
                 display: inline-block;
                 margin-left: .3rem;
                 position: relative;
-                top: -1rem;
+                vertical-align: top;
                 font-weight: 400;
                 text-transform: uppercase;
                 padding: .3rem .5rem;
