Wrap routerLinks in Anchor Tags for Usability purposes

--- a/src/app/core/header/navigation/navigation.component.html
+++ b/src/app/core/header/navigation/navigation.component.html
@@ -23,8 +23,7 @@
                     <span>Events</span></div>
             </li>
             <li class="navigation__item" routerLink="/riders" (click)="toggleScrolling(true)">
-                <div class="navigation__link" [routerLinkActiveOptions]="{exact: false}"
-                     routerLinkActive="active-route">
+                <div class="navigation__link" [routerLinkActiveOptions]="{exact: false}" routerLinkActive="active-route">
                     <mat-icon>surfing</mat-icon>
                     <span>Riders</span></div>
             </li>
