--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -46,10 +46,10 @@
                     <th mat-header-cell *matHeaderCellDef>Link</th>
                     <td mat-cell *matCellDef="let element">
                         <div class="dialog-container__link">
-                            <button mat-icon-button *ngIf="element.link" [routerLink]="element.link"
+                            <a mat-icon-button *ngIf="element.link" [routerLink]="element.link"
                                     tabindex="-1" (click)="markAsRead(element)" matDialogClose>
                                 <mat-icon>arrow_forward</mat-icon>
-                            </button>
+                            </a>
                         </div>
                     </td>
                 </ng-container>
@@ -63,11 +63,11 @@
                            showFirstLastButtons>
             </mat-paginator>
             <div class="dialog-container__actions-buttons">
-                <button mat-raised-button mat-dialog-close (click)="clearAllMessages()">
+                <button *ngIf="userNotifications.data.length > 0" mat-raised-button mat-dialog-close (click)="clearAllMessages()">
                     <mat-icon>delete</mat-icon>
                     <span>Clear messages</span>
                 </button>
-                <button mat-raised-button mat-dialog-close (click)="markAllAsRead()">
+                <button *ngIf="userNotifications.data.length > 0" mat-raised-button mat-dialog-close (click)="markAllAsRead()">
                     <mat-icon>message</mat-icon>
                     <span>Mark all as read</span>
                 </button>
