--- a/src/app/shared/carousel/carousel.component.scss
+++ b/src/app/shared/carousel/carousel.component.scss
@@ -7,20 +7,20 @@
     max-width: 100%;
 
     & .button__container {
-        height: 100%;
+        height: 85%;
         width: 20%;
         position: absolute;
         display: flex;
         align-items: center;
 
         &:first-of-type {
-            left: 0px;
-            top: 0px;
+            left: 0;
+            top: 0;
         }
 
         &:last-of-type {
-            right: 0px;
-            top: 0px;
+            right: 0;
+            top: 0;
         }
 
         & button {
