--- a/src/app/riders/rider-profile/rider-timeline/rider-time-line.component.html
+++ b/src/app/riders/rider-profile/rider-timeline/rider-time-line.component.html
@@ -5,8 +5,8 @@
     <div *ngIf="!loading && !currentTimeLines && !historyTimeLineCollection" class="container__no-data">
         <mat-icon>feedback</mat-icon>
         <div class="timeline-container__no-data__text">
-            <p>No event data of the selected rider found!</p>
-            <p>Come back later when the rider has participated on a surf event.</p>
+            <p>No event data found for the selected rider!</p>
+            <p>Come back later when the rider has participated in a surf event.</p>
         </div>
     </div>
     <mat-tab-group *ngIf="!loading && (currentTimeLines || historyTimeLineCollection)">
