--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -9,4 +9,10 @@
             @content;
         }
     }
+
+    @if $breakpoint == large {
+        @media only screen and (min-width: 1900px) {
+            @content;
+        }
+    }
 }
