--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,7 +36,7 @@
             }
 
             @include respond(large) {
-                row-gap: 1rem;
+                grid-template-columns: repeat(auto-fit, minmax(400px, .2fr));
             }
 
 
