--- a/src/app/shared/carousel/carousel.component.scss
+++ b/src/app/shared/carousel/carousel.component.scss
@@ -7,20 +7,20 @@
     max-width: 100%;
 
     & .button__container {
-        height: 100%;
+        height: 50%;
         width: 20%;
         position: absolute;
         display: flex;
         align-items: center;
+        top: 50%;
+        transform: translate(0, -50%);
 
         &:first-of-type {
             left: 0px;
-            top: 0px;
         }
 
         &:last-of-type {
             right: 0px;
-            top: 0px;
         }
 
         & button {
