improved styling and wording

--- a/src/app/core/header/navigation/navigation.component.html
+++ b/src/app/core/header/navigation/navigation.component.html
@@ -20,7 +20,7 @@
             <li class="navigation__item" routerLink="/" (click)="toggleScrolling(true)">
                 <div class="navigation__link" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active-route">
                     <mat-icon>event_note</mat-icon>
-                    <span>Events</span></div>
+                    <span>Jams</span></div>
             </li>
             <li class="navigation__item" routerLink="/riders" (click)="toggleScrolling(true)">
                 <div class="navigation__link" [routerLinkActiveOptions]="{exact: false}" routerLinkActive="active-route">
