--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,6 @@
             box-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
 
         }
-
         & .events {
             display: grid;
             margin-top: 0.5rem;
@@ -76,3 +75,8 @@
     }
 }
 
+
+
+.underline {
+    @include underline-magical;
+}
