--- a/src/app/core/header/navigation/notification/notification.component.html
+++ b/src/app/core/header/navigation/notification/notification.component.html
@@ -7,7 +7,7 @@
 </div>
 <ng-template #dialogTemplate>
     <div class="dialog-container">
-        <h2 mat-dialog-title>Notifications</h2>
+        <h2 mat-dialog-title><span class="underline">Notifications</span></h2>
         <mat-dialog-content #dialogContent class="dialog-container__content">
             <p *ngIf="userNotifications.data.length === 0">No notifications yet.</p>
             <table *ngIf="userNotifications.data.length > 0" mat-table [dataSource]="userNotifications">
