--- a/src/app/core/header/navigation/notification/notification.component.scss
+++ b/src/app/core/header/navigation/notification/notification.component.scss
@@ -1,4 +1,5 @@
 @import "responsive";
+@import "mixins";
 
 .container {
     display: flex;
@@ -105,4 +106,8 @@
     .mat-column-content {
         width: 100%;
     }
+}
+
+.underline {
+    @include underline-magical;
 }
