--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <main class="main">
-        <h2>Check out our <span class="underline">JAMS:</span></h2>
+        <h2>Check out our <span class="underline">Jams:</span></h2>
         <mat-tab-group [selectedIndex]="selectedTabIndex" (selectedTabChange)="onTabChange($event)">
             <mat-tab *ngIf="currentSurfEvents$ | async as currentSurfEvents" label="Latest Jams"
                      class="main__tab-body">
@@ -52,7 +52,7 @@
     </main>
 
     <aside class="aside">
-        <h2>Checkout our <span class="underline">awesome Riders</span></h2>
+        <h2>Check out our <span class="underline">awesome Riders:</span></h2>
         <mat-spinner *ngIf="isLoadingRandomRiders" diameter="40"></mat-spinner>
         <div *ngIf="!isLoadingRandomRiders && randomRiders.length">
             <div class="rider__cards">
