--- a/src/app/riders/riders.component.html
+++ b/src/app/riders/riders.component.html
@@ -113,7 +113,7 @@
             <div class="aside__favorite">
                 <h2 *ngIf="!favoriteRiders.length">
                     <span class="underline"><mat-icon>favorite_border</mat-icon></span>
-                    <span class="underline"> your favorite Riders</span> to get <span class="underline">notified</span> about their results!
+                    <span class="underline">&nbsp;your favorite Riders</span> to get <span class="underline">notified</span> about their results!
                 </h2>
                 <h2 *ngIf="favoriteRiders.length">
                     Your
