Added qr code of surfEvent to Visitor screen view

--- a/src/app/surf-event/result-view/result-view.component.html
+++ b/src/app/surf-event/result-view/result-view.component.html
@@ -89,7 +89,8 @@
                       [activeHighlight]="highlightActive"
                       [lines]="lines"
     ></rs-progress-line>
-</div>
 
+    <qr-code value="{{qrCodeLink}}" size="200" errorCorrectionLevel="M"></qr-code>
+</div>
 
 
