--- a/src/app/surf-event/result-view/result-view.component.scss
+++ b/src/app/surf-event/result-view/result-view.component.scss
@@ -77,3 +77,13 @@
 .relative-container {
     position: relative;
 }
+
+qr-code {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+
+    @include respond(small) {
+        display: none;
+    }
+}
