--- a/src/app/shared/rider-card/rider-card.component.scss
+++ b/src/app/shared/rider-card/rider-card.component.scss
@@ -22,7 +22,7 @@
 
         &__image {
             background-position: center;
-            background-size: contain;
+            background-size: cover;
             transition: .5s all;
         }
 
