--- a/src/app/surf-event/surf-event/surf-event.component.scss
+++ b/src/app/surf-event/surf-event/surf-event.component.scss
@@ -89,7 +89,7 @@
 
             &__avatar {
                 background-position: center;
-                background-size: contain;
+                background-size: cover;
                 border: 3px solid;
                 border-radius: 50%;
                 cursor: pointer;
