--- a/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
+++ b/src/app/riders/rider-profile/rider-overview/rider-overview.component.scss
@@ -22,12 +22,12 @@
         img {
             padding: .5rem;
             background-color: $color-white;
+            object-fit: cover;
             display: block;
-            height: 100%;
-            max-width: 200px;
+            height: 200px;
             border-radius: 50%;
             margin: auto;
-            width: 100%;
+            width: 200px;
         }
 
         &-favorite {
