--- a/src/app/riders/riders.component.scss
+++ b/src/app/riders/riders.component.scss
@@ -192,6 +192,7 @@
                     border-radius: 50%;
                     padding: 0.5rem;
                     transition: .5s all;
+                    object-fit: cover;
 
                     @include respond(small) {
                         width: 3rem;
