--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.scss
@@ -23,7 +23,7 @@
 
         &__image {
             background-position: center;
-            background-size: contain;
+            background-size: cover;
             transition: .5s all;
             border: 3px solid;
         }
