--- a/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
+++ b/src/app/surf-event/surf-event/competition/round/rider-result/rider-result.component.html
@@ -14,6 +14,7 @@
         <mat-card-title class="rider__card__nickname" *ngIf="!control"> {{rider.firstName}} {{rider.lastName.charAt(0)}}.</mat-card-title>
     </mat-card-header>
     <mat-card-content class="rider__card__content">
+        <rs-favorite-rider *ngIf="rider && !control" [rider]="rider"></rs-favorite-rider>
         <div [ngSwitch]="resultType">
             <div *ngSwitchCase="'default'" class="rider__card__type">
                 <mat-icon aria-hidden="false" aria-label="default" class="rider__card__icon">hourglass_empty</mat-icon>
@@ -34,7 +35,7 @@
                            *ngIf="control"
                            [ngClass]="{'invalid': control.invalid && control.touched}"
                     >
-                    <div class="rider__card__points-cointainer" *ngIf="points">
+                    <div class="rider__card__points-container" *ngIf="points">
                         <p class="rider__card__points">{{points}}</p>
                     </div>
                     <mat-icon aria-hidden="false" *ngIf="disableInput">locked</mat-icon>
